@@ -32,6 +32,7 @@
    rather rare.
 -- Add mpg123_new_string() and mpg123_delete_string() to avoid confusion
    about what mpg123_init_string() and mpg123_free_string() do.
+-- Improve layer III frame parsing/error reporting for bad part2_3_length.
 
 1.25.7
 ------
